background header to body to prevent flicker

--- a/sass/site/_homepage-scenes.scss
+++ b/sass/site/_homepage-scenes.scss
@@ -163,7 +163,7 @@
 		width: 100%;
 		padding-bottom: 0;
 		overflow: hidden;
-		padding: 20px 100px;
+		padding: 20px 200px;
 	}
 	.infoBlockLeftBlack {		//For Semi-transparent background. Disabled for now
 	  color: #FFF;	
